# monogram

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  SECURITY.md  deploying.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: backup-verify.yml  eval.yml  publish.yml  release-plugin.yml  tests.yml
docs/: agents.md  architecture.md  eval.md  ingestion.md  mcp.md  news.md  vault-layout.md  webui.md
docs/design/: webui-mockup.html
docs/setup/: gcp-deployment.md  gcp-webui.md  install-from-source.md  install.md  llm-providers.md  mcp-clients.md  telegram.md  vault-init.md
evals/: __init__.py  anonymizer.py  capture.py  cassette.py  cli.py  conftest.py  fixtures.py  harvest.py  kill_switch.py  report.py  test_anonymizer.py  test_classification.py  test_escalation.py  test_extraction.py  test_orchestrator_ablation.py  test_safety.py
evals/cassettes/: classifier.json
evals/fixtures/: credentials.jsonl  daily_only.jsonl  edge_cases.jsonl  escalation.jsonl  life.jsonl  projects.jsonl  wiki.jsonl
obsidian-plugin/: README.md  esbuild.config.mjs  main.ts  manifest.json  package.json
scratch/: monogram_v01.py
scripts/: check_no_evals_import.py  migrate_v0_2.py  migrate_v0_3.py  verify_mcp_client.py
src/monogram/: __init__.py  backup.py  bot.py  bot_config_cmds.py  bot_eval_cmds.py  bot_notify.py  bot_report_cmds.py  bot_stats_cmd.py  bot_webui_cmds.py  calendar_url.py  cli.py  cli_init_validate.py  cli_migrate.py  cli_news.py  cli_provision_gcp.py  cli_search.py  cli_stats.py  cli_webui.py  config.py  digest.py  encryption_layer.py  endpoint_docs.py  github_store.py  listener.py  llm.py  mcp_pending.py  mcp_reads.py  mcp_server.py  mcp_writes.py  models.py  morning_job.py  pipeline.py  pipeline_log.py  pipeline_stats.py  queue_poller.py  runlog.py  safe_read.py  taxonomy.py  vault_config.py  webgen.py  (+3 more)
src/monogram/agents/: __init__.py  classifier.py  extractor.py  orchestrator.py  verifier.py  writer.py
src/monogram/ingestion/: __init__.py  arxiv_source.py  attachment.py  base.py  hwp.py  office.py  pdf.py  raw_tier.py  social.py  text.py  web.py  youtube.py
src/monogram/news/: __init__.py  fred.py
src/monogram/webui/: __init__.py  backend_gcs.py  backend_mcp_only.py  backend_self_host.py
src/monogram/webui/templates/: components.css  dashboard.html.j2  main.js  shell.html.j2  tokens.css
src/monogram/webui/templates/partials/: board.html.j2  critpath.html.j2  life.html.j2  today.html.j2  topbar.html.j2  wiki.html.j2
tests/: conftest.py  test_bot.py  test_bot_approval_regex.py  test_bot_commands.py  test_bot_config_cmds.py  test_bot_webui_cmds.py  test_calendar_url.py  test_cli_init.py  test_config.py  test_digest.py  test_encryption_layer.py  test_endpoint_docs.py  test_github_store.py  test_ingestion.py  test_install.py  test_legacy_fallback.py  test_listener.py  test_llm.py  test_llm_language.py  test_mcp_add_wiki.py  test_mcp_client_integration.py  test_mcp_llm_config.py  test_mcp_pending.py  test_mcp_reads.py  test_mcp_server.py  test_models.py  test_morning_brief.py  test_morning_job.py  test_pipeline.py  test_pipeline_log.py  test_pipeline_stats.py  test_queue_poller.py  test_safe_read.py  test_security_hardening.py  test_tier3.py  test_vault_config.py  test_webui_backends.py  test_weekly_job.py  test_wiki_backlinks.py  test_wiki_lint.py
tests/agents/: test_agents_contracts.py
